- remove swagger - add delete trans - add trans list
